Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14648

Oops: 0000 [#1] SMP DEBUG_PAGEALLOC in sanity-flr / 70

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Upstream
    • 3
    • 9223372036854775807

      BUG: unable to handle kernel paging request at ffff88017a358ce8
      PGD 36ac067 P4D 36ac067 PUD 1d4953067 PMD 1d4781067 PTE 800ffffe85ca7060
      Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      CPU: 0 PID: 32081 Comm: mdt00_004 Tainted: G        W  O     --------- ---  4.18.0 #36
      Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
      RIP: 0010:lod_declare_destroy+0x3dd/0x6d0 [lod]
      Code: 0f 84 db 01 00 00 f6 83 f0 00 00 00 10 0f 85 1e 01 00 00 0f b7 93 e4 00 00 00 66 85 d2 0f 84 0e 01 00 00 48 8b 83 08 01 00 00 <48> 83 b8 e8 00 00 00 00 0f 84 1c 02 00 00 66 83 78 24 00 0f 84 45
      RSP: 0018:ffff8801a855fb40 EFLAGS: 00010206
      RAX: ffff88017a358c00 RBX: ffff880179c4ced8 RCX: 0000000240000403
      RDX: 0000000000000003 RSI: ffffffffa0b53160 RDI: ffff8801bd4378c0
      RBP: ffff8801bd4378c0 R08: 0000000000000000 R09: 0000000000000001
      R10: 0000000000000000 R11: 0000000000000000 R12: ffff8801772d5800
      R13: ffff8801be5c1680 R14: ffff880178884c00 R15: ffff880178884c18
      FS:  0000000000000000(0000) GS:ffff8801cd400000(0000) knlGS:0000000000000000
      CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      CR2: ffff88017a358ce8 CR3: 0000000174723000 CR4: 00000000000006b0
      Call Trace:
       ? mdd_env_info+0x10/0x70 [mdd]
       ? mdd_mark_orphan_object+0x1b/0x360 [mdd]
       mdd_declare_finish_unlink+0xa0/0x230 [mdd]
       mdd_unlink+0x7a2/0x1760 [mdd]
       mdt_reint_unlink+0x857/0x2060 [mdt]
       ? mdt_root_squash+0x19/0x3e0 [mdt]
       mdt_reint_rec+0x117/0x240 [mdt]
       mdt_reint_internal+0x90c/0xab0 [mdt]
       mdt_reint+0x57/0x100 [mdt]
       tgt_request_handle+0xbe0/0x1970 [ptlrpc]
       ? ptlrpc_main+0x126c/0x30e0 [ptlrpc]
       ptlrpc_main+0x134f/0x30e0 [ptlrpc]
      

            bobijam Zhenyu Xu
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: